// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostReadItemWrapper should render ltr correctly with 10 items 1`] = `
@media (max-width:14.9375rem) {
  .emotion-0 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-0 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-0 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-0 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-0 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .emotion-0 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .emotion-0 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-0 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-0 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-0 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-0 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(3,1fr);
      grid-column-end: span 3;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-0 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}

@media (min-width:80rem) {
    .emotion-0 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}
}

<div>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 keUhmJ"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          1
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 dYgNNo"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          2
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 keUhmJ"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          3
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 dYgNNo"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          4
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 bOhhdK"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          5
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 iAohyw"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          6
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 efLOFq"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          7
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 iAohyw"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          8
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 efLOFq"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          9
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 dvvbaz"
        dir="ltr"
      >
        <span
          class="StyledSpan-fs4y6m-3 htomqN"
        >
          10
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 kYQuFW"
        dir="ltr"
      >
        <a
          class="StyledLink-u0d8kd-0 bBFoEo"
          href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
        >
          Could a computer ever create better art than a human?
        </a>
      </div>
    </div>
  </li>
</div>
`;

exports[`MostReadItemWrapper should render rtl correctly with 10 items 1`] = `
@media (max-width:14.9375rem) {
  .emotion-0 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-0 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-0 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-0 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-0 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .emotion-0 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .emotion-0 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-0 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-0 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-0 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-0 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(3,1fr);
      grid-column-end: span 3;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-0 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}

@media (min-width:80rem) {
    .emotion-0 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(4,1fr);
      grid-column-end: span 4;
    }
}
}

<div>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 fUznEE"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۱
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 EihbL"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۲
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 fUznEE"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۳
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 EihbL"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۴
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 cgEA"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۵
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 ndXtY"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۶
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 jEYThi"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۷
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 ndXtY"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۸
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 jEYThi"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۹
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
  <li
    class="StyledGrid-u0d8kd-4 iLbAiY emotion-0 emotion-1"
    dir="rtl"
    role="listitem"
  >
    <div
      class="ItemWrapper-u0d8kd-3 juBlKT"
    >
      <div
        class="OneColumnWrapper-fs4y6m-0 TwoColumnWrapper-fs4y6m-1 MultiColumnWrapper-fs4y6m-2 jmGdsg"
        dir="rtl"
      >
        <span
          class="StyledSpan-fs4y6m-3 bvXRlE"
        >
          ۱۰
        </span>
      </div>
      <div
        class="StyledItem-u0d8kd-1 fkeZwt"
        dir="rtl"
      >
        <a
          class="StyledLink-u0d8kd-0 OTgcR"
          href="https://www.bbc.com/persian/articles/cej3lzd5e0go"
        >
          در این جشنواره برای نخستین بار از کارگران افغانستان در شهر تهران تقدیر شد
        </a>
      </div>
    </div>
  </li>
</div>
`;

exports[`MostReadLink should render ltr correctly 1`] = `
<div>
  <div
    class="StyledItem-u0d8kd-1 kYQuFW"
    dir="ltr"
  >
    <a
      class="StyledLink-u0d8kd-0 bBFoEo"
      href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
    >
      Could a computer ever create better art than a human?
    </a>
  </div>
</div>
`;

exports[`MostReadLink should render rtl correctly 1`] = `
<div>
  <div
    class="StyledItem-u0d8kd-1 fkeZwt"
    dir="rtl"
  >
    <a
      class="StyledLink-u0d8kd-0 OTgcR"
      href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
    >
      لماذا يخجل البعض من اسم قريته في مصر؟
    </a>
  </div>
</div>
`;

exports[`MostReadLink should render with last updated date correctly 1`] = `
.emotion-0 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

<div>
  <div
    class="StyledItem-u0d8kd-1 kYQuFW"
    dir="ltr"
  >
    <a
      class="StyledLink-u0d8kd-0 bBFoEo"
      href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
    >
      Could a computer ever create better art than a human?
    </a>
    <div
      class="TimestampWrapper-u0d8kd-2 hlECaE"
    >
      <time
        class="emotion-0 emotion-1"
        datetime="2019-03-01T14:00+00:00"
      >
        Last updated: 5th November 2016
      </time>
    </div>
  </div>
</div>
`;
